[package]
name = "lsm-tree-kvstore"
version = "0.1.0"
edition = "2021"
authors = ["Anmol Mishra <anmolmishra777@gmail.com>"]

[dependencies]
crossbeam-skiplist = "0.1"
crc32fast = "1.3"
byteorder = "1.4"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rand = "0.8"

[dev-dependencies]
criterion = "0.5"

// Incremental development step #1

// Incremental development step #15

// Incremental development step #29

// Incremental development step #43

// Incremental development step #57

// Incremental development step #71

// Incremental development step #85

// Incremental development step #99
